--- a/package.json
+++ b/package.json
@@ -5,15 +5,29 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build"
-  },
-  "devDependencies": {
-    "@types/json-server": "0.14.7",
-    "typescript": "5.2.2",
-    "vite": "5.0.10",
-    "vite-plugin-node": "3.1.0"
+    "build": "vite build",
+    "lint": "eslint --ext .ts,.tsx .",
+    "ts-check": "tsc-files --noEmit",
+    "prepare": "husky install"
   },
   "dependencies": {
     "json-server": "0.17.4"
+  },
+  "devDependencies": {
+    "@types/json-server": "0.14.7",
+    "@typescript-eslint/eslint-plugin": "6.17.0",
+    "@typescript-eslint/parser": "6.17.0",
+    "eslint": "8.56.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-import-resolver-typescript": "3.6.1",
+    "eslint-plugin-import": "2.29.1",
+    "eslint-plugin-prettier": "5.1.2",
+    "husky": "8.0.0",
+    "lint-staged": "15.2.0",
+    "prettier": "3.1.1",
+    "tsc-files": "1.1.4",
+    "typescript": "5.3.3",
+    "vite": "5.0.10",
+    "vite-plugin-node": "3.1.0"
   }
 }
