--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "typescript": "5.3.3",
     "vite": "5.0.10",
     "vite-plugin-node": "3.1.0"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-musl": "4.9.2"
   }
 }
