--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "json-server": "0.17.4"
   },
   "devDependencies": {
+    "@types/express": "4.17.21",
     "@types/json-server": "0.14.7",
+    "@types/node": "20.10.7",
     "@typescript-eslint/eslint-plugin": "6.17.0",
     "@typescript-eslint/parser": "6.17.0",
     "eslint": "8.56.0",
