--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "json-server": "0.17.4"
+    "json-server": "0.17.4",
+    "json-server-auth": "2.1.0"
   },
   "devDependencies": {
     "@types/express": "4.17.21",
