--- a/package.json
+++ b/package.json
@@ -11,12 +11,10 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "json-server": "0.17.4",
-    "json-server-auth": "2.1.0"
+    "express": "4.18.2"
   },
   "devDependencies": {
     "@types/express": "4.17.21",
-    "@types/json-server": "0.14.7",
     "@types/node": "20.10.7",
     "@typescript-eslint/eslint-plugin": "6.17.0",
     "@typescript-eslint/parser": "6.17.0",
