--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "express": "4.18.2"
+    "express": "4.18.2",
+    "lowdb": "7.0.1"
   },
   "devDependencies": {
     "@types/express": "4.17.21",
