--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "tsc-files": "1.1.4",
     "typescript": "5.3.3",
     "vite": "5.0.10",
-    "vite-plugin-node": "3.1.0"
+    "vite-plugin-node": "3.1.0",
+    "vite-tsconfig-paths": "4.2.3"
   },
   "optionalDependencies": {
     "@rollup/rollup-linux-x64-musl": "4.9.2"
