--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "cors": "2.8.5",
     "express": "4.18.2",
     "lowdb": "7.0.1"
   },
   "devDependencies": {
+    "@types/cors": "2.8.17",
     "@types/express": "4.17.21",
     "@types/node": "20.10.7",
     "@typescript-eslint/eslint-plugin": "6.17.0",
