--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
   "dependencies": {
     "cors": "2.8.5",
     "express": "4.18.2",
-    "lowdb": "7.0.1"
+    "lowdb": "7.0.1",
+    "uuid": "9.0.1"
   },
   "devDependencies": {
     "@types/cors": "2.8.17",
     "@types/express": "4.17.21",
+    "@types/express-session": "1.17.10",
     "@types/node": "20.10.7",
+    "@types/uuid": "9.0.7",
     "@typescript-eslint/eslint-plugin": "6.17.0",
     "@typescript-eslint/parser": "6.17.0",
     "eslint": "8.56.0",
@@ -26,6 +29,7 @@
     "eslint-import-resolver-typescript": "3.6.1",
     "eslint-plugin-import": "2.29.1",
     "eslint-plugin-prettier": "5.1.2",
+    "express-session": "1.17.3",
     "husky": "8.0.0",
     "lint-staged": "15.2.0",
     "prettier": "3.1.1",
