--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "bcryptjs": "2.4.3",
     "cors": "2.8.5",
     "express": "4.18.2",
     "lowdb": "7.0.1",
     "uuid": "9.0.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "2.4.6",
     "@types/cors": "2.8.17",
     "@types/express": "4.17.21",
     "@types/express-session": "1.17.10",
