--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "bcryptjs": "2.4.3",
     "cors": "2.8.5",
     "express": "4.18.2",
-    "lowdb": "7.0.1",
-    "uuid": "9.0.1"
+    "lowdb": "7.0.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "2.4.6",
@@ -23,7 +22,6 @@
     "@types/express": "4.17.21",
     "@types/express-session": "1.17.10",
     "@types/node": "20.10.7",
-    "@types/uuid": "9.0.7",
     "@typescript-eslint/eslint-plugin": "6.17.0",
     "@typescript-eslint/parser": "6.17.0",
     "eslint": "8.56.0",
