--- a/package.json
+++ b/package.json
@@ -2,44 +2,30 @@
   "name": "wishes-back",
   "private": true,
   "version": "0.1.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint --ext .ts,.tsx .",
-    "ts-check": "tsc-files --noEmit",
-    "prepare": "husky install"
+    "dev": "nodemon src/app.js",
+    "build": "",
+    "start": "",
+    "lint": "eslint .",
+    "prepare": "husky"
   },
   "dependencies": {
     "bcryptjs": "2.4.3",
     "cors": "2.8.5",
-    "express": "4.18.2",
-    "lowdb": "7.0.1"
+    "express": "4.18.2"
   },
   "devDependencies": {
-    "@types/bcryptjs": "2.4.6",
-    "@types/cors": "2.8.17",
-    "@types/express": "4.17.21",
-    "@types/express-session": "1.17.10",
-    "@types/node": "20.10.7",
-    "@typescript-eslint/eslint-plugin": "6.17.0",
-    "@typescript-eslint/parser": "6.17.0",
+    "@babel/core": "7.23.9",
+    "@babel/node": "7.23.9",
+    "@babel/preset-env": "7.23.9",
     "eslint": "8.56.0",
     "eslint-config-prettier": "9.1.0",
-    "eslint-import-resolver-typescript": "3.6.1",
     "eslint-plugin-import": "2.29.1",
-    "eslint-plugin-prettier": "5.1.2",
-    "express-session": "1.17.3",
-    "husky": "8.0.0",
-    "lint-staged": "15.2.0",
-    "prettier": "3.1.1",
-    "tsc-files": "1.1.4",
-    "typescript": "5.3.3",
-    "vite": "5.0.10",
-    "vite-plugin-node": "3.1.0",
-    "vite-tsconfig-paths": "4.2.3"
-  },
-  "optionalDependencies": {
-    "@rollup/rollup-linux-x64-musl": "4.9.2"
+    "eslint-plugin-prettier": "5.1.3",
+    "express-session": "1.18.0",
+    "husky": "9.0.10",
+    "lint-staged": "15.2.1",
+    "nodemon": "3.0.3",
+    "prettier": "3.2.5"
   }
 }
