--- a/package.json
+++ b/package.json
@@ -5,19 +5,17 @@
   "scripts": {
     "dev": "nodemon src/app.js",
     "build": "",
-    "start": "",
+    "start": "node dist/app.js",
     "lint": "eslint .",
     "prepare": "husky"
   },
   "dependencies": {
     "bcryptjs": "2.4.3",
     "cors": "2.8.5",
-    "express": "4.18.2"
+    "express": "4.18.2",
+    "lowdb": "1.0.0"
   },
   "devDependencies": {
-    "@babel/core": "7.23.9",
-    "@babel/node": "7.23.9",
-    "@babel/preset-env": "7.23.9",
     "eslint": "8.56.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-import": "2.29.1",
