--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint --ext .ts,.tsx .",
     "ts-check": "tsc-files --noEmit",
-    "prepare": "husky install"
+    "prepare": "husky"
   },
   "dependencies": {
     "bcryptjs": "2.4.3",
@@ -24,24 +24,24 @@
     "@types/cors": "2.8.17",
     "@types/express": "4.17.21",
     "@types/jsonwebtoken": "9.0.5",
-    "@types/node": "20.10.7",
-    "@typescript-eslint/eslint-plugin": "6.17.0",
-    "@typescript-eslint/parser": "6.17.0",
+    "@types/node": "20.11.16",
+    "@typescript-eslint/eslint-plugin": "6.21.0",
+    "@typescript-eslint/parser": "6.21.0",
     "eslint": "8.56.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-import-resolver-typescript": "3.6.1",
     "eslint-plugin-import": "2.29.1",
-    "eslint-plugin-prettier": "5.1.2",
-    "husky": "8.0.0",
-    "lint-staged": "15.2.0",
-    "prettier": "3.1.1",
+    "eslint-plugin-prettier": "5.1.3",
+    "husky": "9.0.10",
+    "lint-staged": "15.2.2",
+    "prettier": "3.2.5",
     "tsc-files": "1.1.4",
     "typescript": "5.3.3",
-    "vite": "5.0.10",
+    "vite": "5.0.12",
     "vite-plugin-node": "3.1.0",
-    "vite-tsconfig-paths": "4.2.3"
+    "vite-tsconfig-paths": "4.3.1"
   },
   "optionalDependencies": {
-    "@rollup/rollup-linux-x64-musl": "4.9.2"
+    "@rollup/rollup-linux-x64-musl": "4.9.6"
   }
 }
