--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "cors": "2.8.5",
     "dotenv": "16.4.2",
     "express": "4.18.2",
-    "jsonwebtoken": "9.0.2",
-    "lowdb": "7.0.1"
+    "jsonwebtoken": "9.0.2"
   },
   "devDependencies": {
     "@types/bcryptjs": "2.4.6",
