--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,8 +7,6 @@ on:
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
-  WISHES_DB: ${{ secrets.WISHES_DB }}
-  WISHES_SECRET: ${{ secrets.WISHES_SECRET }}
 
 jobs:
   build-and-push-image:
@@ -34,6 +32,9 @@ jobs:
         uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
         with:
           context: .
+          build-args: |
+            "WISHES_DB=${{ secrets.WISHES_DB }}"
+            "WISHES_SECRET=${{ secrets.WISHES_SECRET }}"
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
